build: update to Java 21